# tetraop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: release.yml
doc/: linux-readme.txt  macos-readme.txt  win-readme.txt
install/include/presets/Factory/All/: BA Basso DX.xml  BA Moogish.xml  BA Reese1.xml  BA Sharknado.xml  FX ADSL.xml  FX Alarm.xml  FX Growl1.xml  FX Swirl Down.xml  KEY Bells and Whistles.xml  KEY Brass.xml  KEY First Encounter.xml  KEY Glockenspiel.xml  KEY More Keys.xml  KEY Organ1.xml  KEY Reso Keys.xml  LD Power Chord.xml  PAD First Pad.xml  PAD Hollow Tone.xml  PAD Moon Walk.xml  PAD Slow Joe.xml  PD Vox.xml  PD Vox2.xml  ST Stab1.xml  ST Super Saw1.xml  ST Techno Babble.xml
install/include/presets/Factory/Bass/: DeleteMe.xml
install/include/wavetables/Bass/: Bass1.flac  Bass2.flac  Bass3.flac  Bass4.flac  Bass5.flac  Bass6.flac  Cello1.flac  Cello2.flac  Cello3.flac
install/include/wavetables/Distorted/: Distorted1.flac  Distorted2.flac  Distorted3.flac  Distorted4.flac  Distorted5.flac  EGuitar1.flac  EGuitar2.flac  EGuitar3.flac  Noisy1.flac  Noisy2.flac  Noisy3.flac  Noisy4.flac  Noisy5.flac  Noisy6.flac
install/include/wavetables/Instrument/: Clarinett1.flac  Clavinet1.flac  EPiano1.flac  EPiano2.flac  EPiano3.flac  EPiano4.flac  EPiano5.flac  Guitar1.flac  Guitar2.flac  Oboe1.flac  Organ1.flac  Organ2.flac  Organ3.flac  Organ4.flac  Organ5.flac  Organ6.flac  Organ7.flac  Sax1.flac  Sax2.flac  Violin1.flac  Violin2.flac
install/include/wavetables/Other/: Blended1.flac  Blended2.flac  Blended3.flac  Blended4.flac  Blended5.flac  Blended6.flac  Granular1.flac  Granular2.flac  Granular3.flac
install/include/wavetables/Shapes/: Complex.flac  Saw Rounded.flac  Saw.flac  Shapes1.flac  Shapes2.flac  Shapes3.flac  Shapes4.flac  Shapes5.flac  Shapes6.flac  Shapes7.flac  Square Rounded.flac  Triangle.flac  VGame1.flac  VGame2.flac  VGame3.flac  VGame4.flac  VGame5.flac  VGame6.flac  VGame7.flac
install/include/wavetables/Vocal/: Voice1.flac  Voice2.flac  Voice3.flac  Voice4.flac  Voice5.flac  Voice6.flac  Voice7.flac
install/win/: run.bat  tetraop.nsi
resources/: Init.xml
src/: Globals.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: DelayLine.h  Envelope.cpp  Envelope.h  LFO.cpp  LFO.h  Pattern.cpp  Pattern.h  PhaseDist.h  RandGen.cpp  RandGen.h  SVF.cpp  SVF.h
src/dsp/filter/: Analog.cpp  Analog.cpp.bk  Analog.h  Analog.h.bk  Digital.cpp  Digital.h  Filter.h  Ladder.cpp  Ladder.h  Moog.h.bk  OnePole.h  OnePole.h.bk  Phaser.cpp  Phaser.h  TB303.cpp  TB303.h
src/dsp/fx/: Chorus.cpp  Chorus.h  Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  EQ.cpp  EQ.h  FX.h  MiniVerb.cpp  MiniVerb.h  PhaserFX.cpp  PhaserFX.h  ReverbFX.cpp  ReverbFX.h  TetraVerb.cpp  TetraVerb.h  VitalPhaser.cpp  VitalPhaser.h
src/engine/: FmMatrix.cpp  FmMatrix.h  Modulation.cpp  Modulation.h  OSC.cpp  OSC.h  PhaseDist.h  PresetManager.cpp  PresetManager.h  PresetScanner.cpp  PresetScanner.h  Synth.cpp  Synth.h  TablesManager.cpp  TablesManager.h  UndoMgr.cpp  UndoMgr.h  Unison.cpp  Unison.h  Utils.h  Voice.cpp  Voice.h
src/ui/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  ModulatedParam.h  ModulationDragSource.h  ScaledPluginEditor.cpp  ScaledPluginEditor.h  UIUtils.cpp  UIUtils.h
src/ui/fx/: FXChorus.cpp  FXChorus.h  FXCompressor.cpp  FXCompressor.h  FXDelay.cpp  FXDelay.h  FXDist.cpp  FXDist.h  FXEQ.cpp  FXEQ.h  FXPhaser.cpp  FXPhaser.h  FXReverb.cpp  FXReverb.h  UIFX.cpp  UIFX.h
src/ui/panels/: AboutDialog.h  ConfigsPanel.cpp  ConfigsPanel.h  DragDropOverlay.h  EnvDisplay.cpp  EnvDisplay.h  FXPanel.cpp  FXPanel.h  FilterPanel.cpp  FilterPanel.h  FmMatrixPanel.cpp  FmMatrixPanel.h  GlobalsPanel.cpp  GlobalsPanel.h  Header.cpp  Header.h  LFODisplay.cpp  LFODisplay.h  MacrosPanel.cpp  MacrosPanel.h  MatrixPanel.cpp  MatrixPanel.h  ModulatorsPanel.cpp  ModulatorsPanel.h  OSCPanel.cpp  OSCPanel.h
src/ui/widgets/: CurveEditor.cpp  CurveEditor.h  HSlider.cpp  HSlider.h  LayoutPicker.cpp  LayoutPicker.h  Macro.cpp  Macro.h  MapEditor.cpp  MapEditor.h  Meter.cpp  Meter.h  Modulator.cpp  Modulator.h  Multiselect.cpp  Multiselect.h  PowerCurve.cpp  PowerCurve.h  Rotary.cpp  Rotary.h  TimePicker.cpp  TimePicker.h  UnisonWidget.cpp  UnisonWidget.h  ValuePicker.cpp  ValuePicker.h  WaveDisplay.cpp  WaveDisplay.h  WavetableDisplay.cpp  WavetableDisplay.h
